<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="230dp"
    android:background="@color/appcolor"
    android:layout_margin="20dp"
    android:elevation="10dp"
    android:padding="10dp"
    android:layout_gravity="center"
    app:cardCornerRadius="25dp"
    app:cardElevation="5dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:padding="15dp"
            android:src="@drawable/ic_login"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_bold"
            android:textColor="@color/darkgray"
            android:layout_gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_marginTop="15dp"
            android:id="@+id/dealclose_msg"
            android:gravity="center"
            android:text="@string/logppopup"/>




        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Yes"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center|left"
                android:background="@null"
                android:text="@string/yes"
                android:fontFamily="@font/opensans_bold"
                android:layout_alignParentLeft="true"
                android:textSize="12dp"
                android:layout_marginLeft="5dp"
                android:textColor="@color/black"/>



            <Button
                android:id="@+id/No"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@null"
                android:text="@string/no"
                android:textSize="12dp"
                android:layout_alignParentRight="true"
                android:layout_margin="5dp"
                android:textColor="@color/black" />

        </RelativeLayout>


    </LinearLayout>




</androidx.cardview.widget.CardView>