<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@drawable/header_view"/>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="100dp"
                    android:src="@drawable/splash_logo"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="210dp"
                    android:gravity="center|top"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/opensans_bold"
                        android:text="@string/welcome"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/opensans_regular"
                        android:text="@string/wel_des"
                        android:gravity="center"
                        android:layout_marginLeft="20sp"
                        android:layout_marginRight="20sp"
                        android:textColor="@color/black"
                        android:textSize="15dp"/>


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_marginLeft="20sp"
                        android:layout_marginRight="20sp"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/bg_edittext">


                        <RelativeLayout
                            android:layout_width="50dp"
                            android:layout_height="match_parent"
                            android:layout_alignParentLeft="true"
                            android:id="@+id/lin_1"
                            android:orientation="vertical">

                            <View
                                android:layout_width="1dp"
                                android:layout_height="match_parent"
                                android:background="#E5E5E5"
                                android:layout_alignParentRight="true"/>

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:src="@drawable/ic_log_user"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"/>


                        </RelativeLayout>

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_toRightOf="@+id/lin_1"
                            android:hint="@string/email"
                            android:id="@+id/et_email"
                            android:textSize="14dp"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:inputType="textEmailAddress"
                            android:textColorHint="@color/darkgray"
                            android:textColor="@color/darkgray"
                            android:fontFamily="@font/opensans_bold"
                            android:background="@null"/>



                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_marginLeft="20sp"
                        android:layout_marginRight="20sp"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/bg_edittext">


                        <RelativeLayout
                            android:layout_width="50dp"
                            android:layout_height="match_parent"
                            android:layout_alignParentLeft="true"
                            android:id="@+id/lin_2"
                            android:orientation="vertical">

                            <View
                                android:layout_width="1dp"
                                android:layout_height="match_parent"
                                android:background="#E5E5E5"
                                android:layout_alignParentRight="true"/>

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:src="@drawable/ic_log_pass"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"/>


                        </RelativeLayout>

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_toRightOf="@+id/lin_2"
                            android:hint="@string/password"
                            android:textSize="14dp"
                            android:id="@+id/et_password"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:inputType="textEmailAddress"
                            android:textColorHint="@color/darkgray"
                            android:textColor="@color/darkgray"
                            android:fontFamily="@font/opensans_bold"
                            android:background="@null"/>


                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="20dp"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="14dp"
                        android:id="@+id/txt_login"
                        android:textStyle="bold"
                        android:fontFamily="@font/opensans_bold"
                        android:backgroundTint="@color/black"
                        android:background="@drawable/btn_llogin"
                        android:text="@string/txt_login"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/opensans_regular"
                        android:text="@string/txt_forgotpass"
                        android:gravity="center"
                        android:id="@+id/txt_forgotpass"
                        android:layout_marginLeft="20sp"
                        android:layout_marginRight="20sp"
                        android:textColor="@color/black"
                        android:textSize="14dp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:layout_marginLeft="20sp"
                        android:layout_marginRight="20sp"
                        android:layout_marginBottom="20dp"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        android:orientation="horizontal"
                        android:textStyle="bold">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/opensans_regular"
                            android:text="@string/txt_donthave"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textSize="14dp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/opensans_regular"
                            android:text="@string/txt_createacc"
                            android:gravity="center"
                            android:id="@+id/txt_createaccount"
                            android:textColor="@color/rad"
                            android:textSize="14dp"
                            android:layout_marginLeft="5dp"
                            android:textStyle="bold" />

                    </LinearLayout>



                </LinearLayout>

            </FrameLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>